added kS, kV, kA, and kP values for trajectory motion